--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.1.0",
     "sequelize": "^5.21.3"
+  },
+  "devDependencies": {
+    "express-swagger-generator": "^1.1.17"
   }
 }
